--- a/src/scss/components/FormInput.scss
+++ b/src/scss/components/FormInput.scss
@@ -7,17 +7,23 @@ label{
   }
 }
 
-.MuiInputBase-formControl, .MuiTextField-root{
-  &:focus{
-    //outline-color: $standardBlack;
-  }
-}
-
 .Mui-focused{
   .MuiOutlinedInput-notchedOutline{
     border-width: 1px !important;
     border-color: $standardBlack !important;
   }
 }
+
+.error{
+  .MuiOutlinedInput-notchedOutline{
+    border-width: 1px !important;
+    border-color: $brightRed !important;
+  }
+}
+
+.MuiFormLabel-root, .MuiInputLabel-root, .MuiInputLabel-formControl, .MuiInputLabel-animated, .MuiInputLabel-outlined{
+  color: $standardGrey !important;
+}
+
 
 
