Update carousel boxshadow, add slider inside carousel card

--- a/src/scss/common/variables.scss
+++ b/src/scss/common/variables.scss
@@ -2,6 +2,7 @@
 $white: #ffffff;
 $black: #000000;
 $standardGrey: #8c8c8c;
+$grey: #8a8a8a;
 $standardBlack: #242424;
 $brightRed: #d92626;
 $standardYellow: #f4c55b;
