--- a/src/scss/components/CustomGallery.scss
+++ b/src/scss/components/CustomGallery.scss
@@ -8,7 +8,7 @@
 .column {
   flex: 25%;
   max-width: 25%;
-  padding: 0 4px;
+  padding: 0 12px;
 }
 
 .column img {
@@ -16,6 +16,12 @@
   vertical-align: middle;
   width: 100%;
   border-radius: 10px;
+  cursor: pointer;
+  padding: 7px 0;
+  transition: transform 0.3s ease-in-out;
+  &:hover {
+    transform: scale(1.05);
+  }
 }
 
 /* Responsive layout - makes a two column-layout instead of four columns */
