Update style and logic for filter popover

--- a/src/scss/common/variables.scss
+++ b/src/scss/common/variables.scss
@@ -6,3 +6,8 @@ $grey: #8a8a8a;
 $standardBlack: #242424;
 $brightRed: #d92626;
 $standardYellow: #f4c55b;
+$bluePastel: #47b4bb;
+
+// ========= MEDIA QUERIES ========= //
+$sm: 600px;
+$md: 960px;
