--- a/src/scss/components/FormInput.scss
+++ b/src/scss/components/FormInput.scss
@@ -25,5 +25,12 @@ label{
   color: $standardGrey !important;
 }
 
+.MuiCheckbox-colorSecondary{
+  &.Mui-checked{
+    color: black !important;
+  }
+}
+
+
 
 
