Update artist information registration, add avatar and tattoos upload pages

--- a/src/scss/components/FormInput.scss
+++ b/src/scss/components/FormInput.scss
@@ -35,6 +35,16 @@ label{
   background-color: $white !important;
 }
 
+.MuiOutlinedInput-multiline{
+  background-color: $white !important;
+}
+
+.MuiInputBase-root{
+ &.MuiOutlinedInput-adornedStart{
+   background-color: $white !important;
+ }
+}
+
 
 
 
