tweaking color scheme

--- a/src/scss/common/variables.scss
+++ b/src/scss/common/variables.scss
@@ -6,7 +6,7 @@ $grey: #8a8a8a;
 $standardBlack: #242424;
 $brightRed: #d92626;
 $standardYellow: #f4c55b;
-$bluePastel: #47b4bb;
+$primaryColor: #1E1E1E;
 
 // ========= MEDIA QUERIES ========= //
 $sm: 600px;
